--- a/source/styles/src/main/main.styl
+++ b/source/styles/src/main/main.styl
@@ -4,3 +4,5 @@
 @import "work/main.styl"
 @import "work_process/main.styl"
 @import "services/main.styl"
+@import "testimonials/main.styl"
+@import "testimonials/slick_js.styl"
