--- a/source/template/src/main/index.pug
+++ b/source/template/src/main/index.pug
@@ -10,4 +10,7 @@ div.container
 	include work_process/index.pug
 div.container-header
 	div.container
-		include services/index.pug	
+		include services/index.pug
+div.container-testimonials
+	div.container
+		include testimonials/index.pug
