--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -1,7 +1,12 @@
 doctype html
 html
 	head
-		link(rel="stylesheet" href="/styles/main.min.css")
+		link(rel="stylesheet" href="styles/main.min.css")
+		script(src="https://code.jquery.com/jquery-3.3.1.js")
+		script(src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js")
+		script(src="js/slider.js")
+
+
 
 	body
 		div.container-header
