--- a/source/styles/src/main/testimonials/main.styl
+++ b/source/styles/src/main/testimonials/main.styl
@@ -21,8 +21,10 @@
 			.text
 				text-align: center;
 				max-width: 800px;
+				font-size: 20px;
 				
 				.author
+					font-size: 12px;
 					padding-top: 50px;
 					text-transform: uppercase;
 	
