fix bugs with slider

--- a/source/styles/src/main/testimonials/slick_js.styl
+++ b/source/styles/src/main/testimonials/slick_js.styl
@@ -22,7 +22,8 @@
 			background-color: transparent;
 			outline: none;
 			border: none;
-			
+			&:hover
+				cursor: pointer;
 		button:after
 			display: block;
 			background-color: white;
