--- a/source/styles/src/main/main.styl
+++ b/source/styles/src/main/main.styl
@@ -6,3 +6,5 @@
 @import "services/main.styl"
 @import "testimonials/main.styl"
 @import "testimonials/slick_js.styl"
+@import "clients/main.styl"
+@import "need_a_project/main.styl"
