--- a/source/template/src/main/index.pug
+++ b/source/template/src/main/index.pug
@@ -14,3 +14,9 @@ div.container-header
 div.container-testimonials
 	div.container
 		include testimonials/index.pug
+div.container-skils
+	div.container
+		include clients/index.pug
+div.container-project
+	div.container
+		include need_a_project/index.pug
