fix no commited files

--- a/source/styles/src/main.styl
+++ b/source/styles/src/main.styl
@@ -9,5 +9,12 @@
 		background-color: grey;		
 	&-about
 		background-color: white;
+	&-project
+		background-color: grey;	
+	&-footer
+		display: grid;
+		grid-template-columns: 300px 200px 160px 160px; 
+		grid-column-gap: 100px;
 @import "header/main.styl"
-@import "main/main.styl"	
+@import "main/main.styl"
+@import "footer/main.styl"
