--- a/source/styles/src/main.styl
+++ b/source/styles/src/main.styl
@@ -1,6 +1,7 @@
 /*containers styles*/
 .container
-	width: 1170px;
+	width: 80%;
+	max-width: 1170px;
 	margin: 0 auto;
 	// background-color: red;
 	height: auto;
