--- a/source/styles/src/main/about/main.styl
+++ b/source/styles/src/main/about/main.styl
@@ -1,5 +1,5 @@
 .about
-	height: 326px;
+	min-height: 326px;
 	text-align: center;
 	margin: 0;
 	font-family: serif;
@@ -22,3 +22,6 @@
 		
 	&-signature
 		margin: 35px 0 0 5px;
+		
+		@media screen and  (max-width: 890px) 
+			margin-bottom: 45px;		
